group = 'dev.fusionize'
version = '0.0.1-SNAPSHOT'
description = 'fusionize-orchestrator'

repositories {
    mavenCentral()
}

buildscript {
    ext{
        springBootVersion  = '3.5.6'
        springBootDependencyMangementVersion  = '1.1.7'
        springAiVersion = '1.0.3'
    }
}

allprojects {
    buildDir = "${rootProject.projectDir}/build${project.path.replace(':', '/')}"
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    dependencies {
        testImplementation platform('org.junit:junit-bom:6.0.2')
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
    repositories {
        mavenCentral()
    }
    tasks.named('test') {
        useJUnitPlatform()
        testLogging {
            showStandardStreams = true
        }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
        finalizedBy jacocoTestReport
    }
    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
    }
    jacocoTestCoverageVerification {
        dependsOn jacocoTestReport
        violationRules {
            rule {
                limit {
                    minimum = 0.80
                }
            }
        }
    }
    tasks.named('check') {
        dependsOn jacocoTestCoverageVerification
    }
}

tasks.register('dev') {
    group = 'fusionize'
    description = 'Run Fusionize locally'

    dependsOn ':fusionize:apps:orchestrator:bootRun'
}